# dbt-fabricspark

./: .flake8  .gitignore  .pre-commit-config.yaml  .stress-test-marker  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  dev_requirements.txt  jest.config.ts  nx.json  package-lock.json  package.json  project.json  pyproject.toml  pytest.ini  readme_changelog.md  requirements.txt  setup.py  shortcuts.json  test.env.example  test_livy_dml.py  tox.ini  tsconfig.json
.devcontainer/: .devcontainer-hash.txt  Dockerfile.local  README.md  devcontainer.json  devcontainer.local.json  devcontainer.test.ts  project.json
.devcontainer/config/: README.md
.devcontainer/config/defaults/: hive-site.xml.tmpl  livy-server-log4j.properties.tmpl  livy-spark-log4j.properties.tmpl  livy.conf.tmpl  spark-defaults-breakdown.yaml  spark-defaults.conf.tmpl  spark-devcontainer.yaml.example
.devcontainer/overlay/: common.sh  install-packages.sh  install-python-tooling.sh  post-attach-commands.sh  post-create-commands.sh
.devcontainer/scripts/: build-devcontainer.ts  compute-devcontainer-hash.ts  const.ts  push-devcontainer.ts
.github/: ci.yml  copilot-instructions.md  dependabot.yml  gci.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  regression-report.yml
.github/scripts/: update_dependencies.sh
.github/workflows/: ci.yml  docs-issues.yml  integration.yml  main.yml  release.yml
.github/workflows/templates/: container.template.yaml
.scripts/: run.sh
contrib/: README.md  bootstrap-dev-env.ps1  bootstrap-dev-env.sh
dbt/adapters/fabricspark/: __init__.py  __version__.py  column.py  connections.py  fabric_spark_credentials.py  impl.py  livysession.py  python_submissions.py  relation.py  session.py  shortcut.py  shortcut_client.py  shortcuts.py
dbt/include/fabricspark/: dbt_project.yml  profile_template.yml
docker/: Compose.sqlserver.metastore.yaml
docs/: README.md  RELEASE_CHECKLIST.md
integration_tests/: conftest.py  docker-compose.yml  docker_manager.py  test_dbt_fabricspark.py
integration_tests/config/: hive-site.xml  livy-env.sh  livy.conf  spark-defaults.conf
integration_tests/dbt-adventureworks/: .gitignore  ci_seeds.yaml  dbt_project.yml  package-lock.yml  profiles.yml
integration_tests/dbt-adventureworks/macros/: ensure_database_exists.sql  location_clause.sql  override_default_schema_name.sql
integration_tests/scripts/: download_seeds.py  entrypoint.sh  init-metastore.sh  run-dbt-local.sh  upload_seeds.py
scripts/: Makefile  build-dist.sh  setup.py
tests/: conftest.py
tests/fixtures/dbt-jaffle-shop/: dbt_project.yml
tests/functional/: conftest.py  fabric_client.py  no_schema_groups.py  nuke.py  orchestrator.py  test_config.yaml
tests/functional/adapter/: _store_test_failures_base.py  test_constraints.py  test_cross_workspace.py  (+8 more)
tests/tools/: README.md  render_mermaid.py
tests/unit/: test_adapter.py  test_alter_column_set_constraints_dispatcher.py  test_column.py  test_concurrent_livy.py  test_connections.py  test_credentials.py  test_fabric_client.py  test_http_utils.py  test_livysession.py  test_livysession_optional_fields.py  test_macros.py  test_macros_no_unexpected_blocks.py  test_mlv_api.py  test_nuke.py  test_relation_duplicate_identity.py  test_relation_no_database_check.py  test_render_mermaid.py  test_shortcuts.py  test_token_command.py  utils.py
tools/: jest.config.ts  project.json
tools/gh-automation/: README.md  approve-workflow.ts  compact-dependabot.ts  get-version-diffs.ts  nudge.ts  sync-main.ts
tools/scripts/: fail-on-untracked-files.ts  hive-schema-4.0.0.mssql.sql  init-metastore.sh  run-livy.sh  run-local-e2e.sh  run.sh
(+187 files in other folders)
